# github-release

./: .flake8  .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  github_release.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
scripts/: upload-latest-release.sh
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_distribution.py  test_integration_asset.py  test_integration_commit.py  test_integration_ref.py  test_integration_release_create.py  test_integration_release_delete.py  test_integration_release_edit.py
